website/static/style.css
/* Live in Style -- Snap Backup */
/* colors: teal (#008080), palegreen (#98FB98), yellow (#FFFF00) */

/* Base */
body {
   padding: 0px 50px 0px 124px;  /* adjust left padding to provide enough space for menu */
   }
body >header, main, body >footer {
   max-width: 800px;
   margin: 0px;
   }
body >header {
   padding-top: 30px;
   margin-bottom: 20px;
   }
body >header .arch {
   position: absolute;
   top: 0px;
   left: 124px;
   width: 200%;
   background-color: palegreen;
   z-index: -1000;
   }
body >header .arch >div {
   height: 200px;
   background-color: white;
   border: 4px solid teal;
   border-right: none;
   border-bottom: none;
   border-top-left-radius: 1000px;
   }
body >header >h1 {
   font-size: 3rem;
   text-align: right;
   }
body >header >aside {
   padding-top: 25px;
   }
body >header >aside a img {
   height: 96px;
   }

main {
   padding-left: 3em;
   }
main >section:first-child >p:first-child,
main >section:first-child >h2:first-child {
   text-indent: 2em;
   }

body >footer {
   font-size: 0.8rem;
   color: gray;
   border-top: 1px solid silver;
   padding: 10px;
   }


/* Layout */
.stress { font-weight: bold; font-style: italic; color: teal; }
img.screen { border: 3px solid teal; margin: 10px 0px; }

.thumb-box     { text-align: center; background-color: teal; padding: 10px; border: 1px solid silver; }
.thumb-box div { color: palegreen; font-size: 70%; }
.thumb-box a   { color: whitesmoke; font-size: 70%; }

.steps { font-size: 90%; border: 1px solid silver; padding: 2px; margin: 3px 0px 0px 30px; }

#news { float: left; font-size: 80%; border: dashed 1px teal; width: 170px; padding: 7px 7px 7px 10px; margin: 10px 15px 5px 0px; }
#news .news-header { font-size: 100%; font-weight: bold; text-align: center; color: teal; border: solid teal 1px; background-color: yellow; padding: 1px; margin-bottom: 9px; }
#news .date { display: inline-block; font-style: italic; color: white; background-color: darkgray; padding: 2px 9px 1px 10px; }
#news p { margin: 3px 0px 15px 0px; }

/* Section boxes */
.box-top    { font-weight: bold; font-size: 110%; border: solid teal 1px; text-align: center; background: darkgray; padding: 3px; }
.box-middle { border-left: solid teal 1px; border-right: solid teal 1px; text-align: center; padding: 5px; }
.box-bottom { border: solid teal 1px; text-align: center; padding: 5px 35px; }

/* 3rd party */

/* Link colors */
a { border-color: teal; }
a:hover { background-color: teal; outline-color: teal; }

/* Flat button color */
.flat button { background-color: cornflowerblue; }
.flat button:hover { background-color: royalblue; }

/* Reveal action color */
.reveal-action { color: teal; }
.reveal-action:hover { background-color: teal; }

/* PERFECT style colors */
.perfect { border-color: teal; }                                    /* outer color */
.perfect h1 { background-color: teal; }                             /* outer color */
.perfect input, .perfect textarea { background-color: mintcream; }  /* input fields */

/* Hamburger Menu Colors */
/* Configuration */
nav.hamburger-menu .hamburger,
nav.hamburger-menu >ul >li >a {
   color: gainsboro;              /* menu font color */
   }
nav.hamburger-menu .hamburger,
nav.hamburger-menu >ul {
   background-color: teal;       /* menu background color */
   }
nav.hamburger-menu >ul >li.current >a,
nav.hamburger-menu >ul >li:hover >a {
   color: white;                     /* menu font highlight color on hover */
   background-color: lightseagreen;  /* menu background highlight color on hover */
   }

nav.hamburger-menu >ul >li >a {
   padding: 10px 20px 10px 16px;  /* override default padding */
   }

/* Mobile */
@media (max-width: 667px) {  /* selects iPhone 6/6s/7 landscape and anything narrower */
   body {
      padding: 0px 20px 0px 0px;  /* adjust left padding to provide enough space for menu */
      }
   body >header {
      padding-top: 40px;
      }
   body >header .arch {
      left: -4px;
      }
   body >header >h1 {
      font-size: 2rem;
      }
   }

